Closed Bug 747929 Opened 12 years ago Closed 12 years ago

tstclnt "ping" (-q) shouldn't require an NSS database, introduce ping timeout parameter

Categories

(NSS :: Tools, defect)

3.13.5
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: KaiE, Assigned: KaiE)

References

Details

Attachments

(1 file, 2 obsolete files)

It should be possible to use the

  -q  :  "ping to tcp/ip port"

feature of tstclnt without having to provice an NSS database.

(This will simplify some new test automation I'm going to propose.)
Attached patch Patch v1 (obsolete) — Splinter Review
This patch simply:

- moves the NSS init code further down

- removes the unnecessary NSS shutdown inside the "ping and exit" code
  (because with the above move of code, we haven't initialized yet).
Assignee: nobody → kaie
Attachment #617491 - Flags: review?(rrelyea)
Summary: tstclnt "ping" (-q) should not require an NSS database → tstclnt "ping" (-q) shouldn't require an NSS database
Blocks: 741873
Comment on attachment 617491 [details] [diff] [review]
Patch v1

I'll also need a configurable timeout parameter, so let's postpone this change until I have a new patch.
Attachment #617491 - Attachment is obsolete: true
Attachment #617491 - Flags: review?(rrelyea)
Summary: tstclnt "ping" (-q) shouldn't require an NSS database → tstclnt "ping" (-q) shouldn't require an NSS database, introduce ping timeout parameter
Attached patch Patch v2 (obsolete) — Splinter Review
Attachment #617508 - Flags: review?(rrelyea)
Comment on attachment 617508 [details] [diff] [review]
Patch v2

sigh. not as simple as that, because of the retry loop...
(patch worked with iptables -j DROP, but still blocks with -j REJECT)
Attachment #617508 - Flags: review?(rrelyea) → review-
Attached patch Patch v3Splinter Review
Attachment #617508 - Attachment is obsolete: true
Attachment #617516 - Flags: review?(rrelyea)
Comment on attachment 617516 [details] [diff] [review]
Patch v3

r+ rrelyea.

I noticed the original code is not calling PR_Cleanup() on the error paths. This is probably because the error paths aren't tested when doing mem-leak testing (which is the only reason to call PR_Cleanup() before closing.

bob
Attachment #617516 - Flags: review?(rrelyea) → review+
Checking in tstclnt/tstclnt.c;
/cvsroot/mozilla/security/nss/cmd/tstclnt/tstclnt.c,v  <--  tstclnt.c
new revision: 1.71; previous revision: 1.70
done
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.14
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: