Bug 747929, tstclnt "ping" (-q) shouldn't require an NSS database, introduce ping timeout parameter, r=rrelyea